# mai-dl2

./: .gitignore  ENHANCED_OSR_README.md  HTCONDOR_GUIDE.md  LICENSE.txt  README.md  all_experiments.sub  analyze_enhanced_results.py  analyze_htcondor_results.py  check_htcondor_ready.py  dual_smoke_test.sub  enhanced_osr_experiments.sub  execute_all.ps1  experiment_configs.txt  generate_experiment_configs.py  htcondor_all_experiments.sh  htcondor_job.sh  pyproject.toml  quick_smoke_test.py  requirements.txt  run_all_experiments.bat  run_all_experiments.py  run_enhanced_experiments.py  run_experiment.sh  run_gtsrb_experiments.py  setup.py  smoke_test.sub  test_cpu_training.py  test_enhanced_implementation.py  test_hydra_issue.py  test_seed_access.py  train_datasets_separately.py
configs/: classic.yaml  classic_cifar10.yaml  classic_gtsrb.yaml  config.yaml  exp_cifar10_combined_5u.yaml  exp_cifar10_high_penalty_1u.yaml  exp_cifar10_high_threshold_3u.yaml  exp_cifar10_optimized_combined_5u.yaml  exp_cifar10_penalty_3u.yaml  exp_cifar10_threshold_1u.yaml  exp_gtsrb_combined_9u.yaml  exp_gtsrb_high_penalty_3u.yaml  exp_gtsrb_low_threshold_6u.yaml  exp_gtsrb_optimized_combined_9u.yaml  exp_gtsrb_penalty_6u.yaml  exp_gtsrb_threshold_3u.yaml
configs/dataset/: cifar10_1u.yaml  cifar10_3u.yaml  cifar10_5u.yaml  cifar10_8k_2u.yaml  gtsrb_34k_9u.yaml  (+2 more)
report/: main.tex
scripts/: gen_plots.sh  run_eval.sh  run_train.sh  sweep.yaml
src/: eval.py  open_set_metrics.py  train.py  train_module.py
tests/: conftest.py  test_dataloader.py  test_losses.py  test_metrics.py
(+179 files in other folders)
